--- a/css/main.css
+++ b/css/main.css
@@ -900,6 +900,8 @@ img {
   overflow-y: scroll;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
+  visibility: hidden;
+  pointer-events: none;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -909,6 +911,8 @@ img {
 .mobile-menu.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  visibility: visible;
+  pointer-events: initial;
 }
 
 .mobile-nav {
@@ -1006,21 +1010,45 @@ img {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-color: #2f303a;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: 50% 50%;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+
+@media screen and (min-width) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
   color: #ffffff;
+  margin-bottom: 40px;
+  font-family: 'Roboto';
+  font-style: normal;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.6;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 480px) {
+  .hero__title {
+    font-size: 21px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+  }
 }
 
 .hero__button {
@@ -1045,6 +1073,7 @@ img {
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   visibility: visible;
+  overflow-y: scroll;
 }
 
 .is-hidden {
@@ -1058,17 +1087,29 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  height: 581px;
-  width: 528px;
+  height: 609px;
+  width: 450px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 
+@media screen and (max-width: 480px) {
+  .hero__modal {
+    height: 609px;
+    width: 300px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__modal {
+    height: 581px;
+    width: 528px;
+  }
+}
+
 .form {
-  width: 528px;
-  height: 581px;
   margin-left: auto;
   margin-right: auto;
   padding: 40px;
@@ -1110,15 +1151,27 @@ img {
 }
 
 .form__wrap {
+  width: 370px;
   position: relative;
-  width: 448px;
   margin-right: auto;
   margin-left: auto;
 }
 
+@media screen and (max-width: 480px) {
+  .form__wrap {
+    width: 220px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form__wrap {
+    width: 448px;
+  }
+}
+
 .form__contacts {
   outline: none;
-  width: 448px;
+  width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
@@ -1129,6 +1182,18 @@ img {
   padding-left: 42px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 480px) {
+  .form__contacts {
+    width: 220px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form__contacts {
+    width: 448px;
+  }
 }
 
 .form__field:focus-within .form__contacts {
@@ -1156,12 +1221,24 @@ img {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
-  width: 448px;
+  width: 370px;
   height: 120px;
   margin-right: auto;
   margin-left: auto;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 480px) {
+  .form__textarea {
+    width: 220px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form__textarea {
+    width: 448px;
+  }
 }
 
 .form__field:focus-within .form__textarea {
@@ -1250,11 +1327,23 @@ img {
 }
 
 .form-checkbox_text {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (max-width: 480px) {
+  .form-checkbox_text {
+    width: 250px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-checkbox_text {
+    font-size: 14px;
+  }
 }
 
 .form-checkbox__link {
