--- a/sass/components/_backdrop-modal.scss
+++ b/sass/components/_backdrop-modal.scss
@@ -6,6 +6,7 @@
     height: 100vh;
     background: rgba(0, 0, 0, 0.2);
     visibility: visible;
+    overflow-y: scroll;
 }
 
 .is-hidden {
@@ -18,11 +19,21 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 581px;
-    width: 528px;
+    height: 609px;
+    width: 450px;
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    @media screen and (max-width:480px) {
+        height: 609px;
+        width: 300px;
+    }
+
+    @media screen and (min-width:1200px) {
+        height: 581px;
+        width: 528px;
+    }
 }
