--- a/sass/components/_form-hero.scss
+++ b/sass/components/_form-hero.scss
@@ -1,9 +1,15 @@
 .form {
-    width: 528px;
-    height: 581px;
+// width: 528px;
+// height: 581px;
+
+
+    
     margin-left: auto;
     margin-right: auto;
     padding: 40px;
+
+
+    
 }
 
 .form__title {
@@ -37,15 +43,25 @@
 }
 
 .form__wrap {
+width: 370px;
+
     position: relative;
-    width: 448px;
+    
     margin-right: auto;
     margin-left: auto;
+
+@media screen and (max-width:480px) {
+    width: 220px;
+}
+
+   @media screen and (min-width:1200px) {
+    width: 448px;
+   }
 }
 
 .form__contacts {
     outline: none;
-    width: 448px;
+    width: 370px;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
@@ -54,6 +70,14 @@
     padding-bottom: 12px;
     padding-left: 42px;
     transition: border-color 250ms $transition-timing-function;
+
+@media screen and (max-width:480px) {
+    width: 220px;
+}
+
+@media screen and (min-width:1200px) {
+    width: 448px;
+}
 
     .form__field:focus-within & {
         border-color: rgba(33, 150, 243, 1);
@@ -83,11 +107,19 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
-    width: 448px;
+    width: 370px;
     height: 120px;
     margin-right: auto;
     margin-left: auto;
     transition: border-color 250ms $transition-timing-function;
+
+@media screen and (max-width:480px) {
+    width: 220px;
+}
+
+@media screen and (min-width:1200px) {
+    width: 448px;
+}
 
     .form__field:focus-within & {
         border-color: rgba(33, 150, 243, 1);
@@ -141,11 +173,19 @@
 }
 
 .form-checkbox_text {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: #757575;
+
+@media screen and (max-width:480px) {
+    width: 250px;
+}
+
+    @media screen and (min-width:1200px) {
+        font-size: 14px;
+    }
 }
 
 .form-checkbox__link {
