--- a/sass/components/_section-benefits.scss
+++ b/sass/components/_section-benefits.scss
@@ -12,11 +12,32 @@
 }
 
 .benefits {
-    display: flex;
+    
+   display: block;
+
+    @media screen and (min-width:768px) {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+
+.benefits__item {
+    @media screen and (max-width:767px) {
+        margin-bottom: 30px;
+    }
+    
+
+    @media screen and (min-width:768px) {
+        width: 354px;
+    }
 }
 
 .benefits__item:not(:last-child) {
-    margin-right: 30px;
+    
+    @media screen and (min-width:1200px) {
+        margin-right: 30px;
+    }
 }
 
 .benefits__box {
@@ -36,9 +57,17 @@
     font-weight: 700;
 
     text-transform: uppercase;
+
+    @media screen and (max-width:767px) {
+        text-align: center;
+    }
 }
 
 .benefits__text {
     color: $secondary-color;
     line-height: 1.7;
+
+    @media screen and (max-width:767px) {
+        margin-bottom: 30px;
+    }
 }
