--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -9,18 +9,45 @@
 }
 
 .clients {
+    
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+justify-content: center;
+
+    @media screen and (min-width:768px) and (max-width:1199px) {
+       
+    
+    }
+
+    @media screen and (min-width:1200px) {
+    display: flex;
+    
     align-items: center;
+    gap: 0;
+    }
 }
 
 .clients__item {
-    width: 170px;
+    width: 210px;
     height: 92px;
 
+@media screen and (min-width:768px) and (max-width:1199px) {
+width: 226px;
+height: 92px;
+}
+
+@media screen and (min-width:1200px) {
+    width: 170px;
+    height: 92px;
+}
+
+@media screen and (min-width:1200px) {
     &:not(:last-child) {
         margin-right: 30px;
     }
+}
+   
 }
 
 
@@ -50,3 +77,4 @@
     .clients__link:focus & {
         fill: #2196f3;}
 }
+
