--- a/sass/components/_footer-page.scss
+++ b/sass/components/_footer-page.scss
@@ -5,12 +5,30 @@
 }
 
 .footer-page_general {
+
+    @media screen and (max-width:767px){
+        display: block;
+        text-align: center;
+    }
+
+
+    @media screen and (min-width:1200px) {
     display: flex;
     align-items: baseline;
+    text-align: left;
+    }
+    
 }
 
 .content-footer {
-    flex-grow: 1;
+    @media screen and (max-width:767px) {
+        margin-bottom: 60px;
+    }
+
+    @media screen and (min-width:1200px) {
+        text-align: left;
+        flex-grow: 1;
+    }
 }
 
 .content-footer__logo {
@@ -68,7 +86,11 @@
 /* footer 2 bloc */
 
 .footer-social {
-    margin-left: 70px;
+
+    @media screen and (min-width:1200px) {
+        margin-left: 70px;
+    }
+    
 }
 
 .footer-social__text {
@@ -78,11 +100,22 @@
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 20px;
+
+
+    @media screen and (min-width:1200px) {
+        text-align: left;
+    }
 }
 
 .footer-network {
+    @media screen and (max-width:767px) {
+        justify-content: center;
+        margin-bottom: 60px;
+    }
+    
     display: flex;
     align-items: center;
+    
 }
 
 .footer-network__item {
@@ -120,7 +153,17 @@
 /* Footer 3 bloc */
 
 .footer-subscribe {
-    margin-left: 93px;
+@media screen and (min-width:768px) and (max-width:1199px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+}
+
+    @media screen and (min-width:1200px) {
+        margin-left: 93px;
+    }
+    
 }
 
 .footer-subscribe__text {
@@ -133,10 +176,18 @@
 }
 
 .form-subscribe {
-    display: flex;
+
+    @media screen and (min-width:1200px) {
+        display: flex;
+    }
+    
 }
 
 .form-subscribe__input {
+@media screen and (max-width:1199px) {
+    margin-bottom: 20px;
+}
+
     display: inline-block;
     width: 358px;
     outline: none;
@@ -161,12 +212,18 @@
     align-items: center;
     width: 200px;
     height: 50px;
-    margin-left: 12px;
+    margin-left: auto;
+    margin-right: auto;
     color: $white-color;
     background-color: $blue-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: transparent;
+
+
+    @media screen and (min-width:1200px) {
+        margin-left: 12px;
+    }
 }
 
 .footer-button__text {
@@ -179,4 +236,20 @@
 .footer-button__icons {
     fill: $white-color;
     margin-left: 10px;
+}
+
+.footer-wrapper{
+@media screen and (min-width:768px) and (max-width:1199px) {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-bottom: 60px;
+}
+@media screen and (min-width:1200px)  {
+    display: flex;
+    align-items: baseline;
+
+}
+    
+
 }
