--- a/sass/components/_section-benefits.scss
+++ b/sass/components/_section-benefits.scss
@@ -15,22 +15,30 @@
     
    display: block;
 
-    @media screen and (min-width:768px) {
+    @media screen and (min-width:768px) and (max-width:1199px) {
         display: flex;
-        justify-content: space-between;
         flex-wrap: wrap;
+        gap: 30px;
     }
+@media screen and (min-width:1200px)  {
+    display: flex;
+    
+}
+
 }
 
 .benefits__item {
-    @media screen and (max-width:767px) {
-        margin-bottom: 30px;
-    }
-    
+
 
     @media screen and (min-width:768px) {
         width: 354px;
+    
     }
+
+    @media screen and (min-width:1200px) {
+        width: 270px;
+        margin-bottom: 0;
+        }
 }
 
 .benefits__item:not(:last-child) {
