--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -13,7 +13,31 @@
 }
 
 .team {
+
+@media screen and (min-width:768px) and (max-width:1199px){
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    
+}
+
+    @media screen and (min-width:1200px) {
+        display: flex;
+    }
+    
+}
+
+.team-image{
+
+@media screen and (max-width:767px) {
+    width: 450px;
+    height: 460px;
+}
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        width: 354px;
+        height: 374px;
+    }
 }
 
 .team__item {
@@ -23,14 +47,45 @@
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
 
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
+@media screen and (max-width:767px) {
+    max-width: 450px;
+    height: 622px;
+
+    &:not(:last-child){
+        margin-bottom: 30px;
+    }
 }
+
+@media screen and (min-width:768px) and (max-width:1199px) {
+    width: 354px;
+    height: 536px;
+}
+
+        @media screen and (min-width:1200px) {
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
+    }
+}
+       
 
 
 
 /* Team card */
+.team-card{
+    
+    @media screen and (max-width:767px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+
+}
+
+
+
 .team-card__wrapper {
     padding-top: 30px;
     padding-bottom: 30px;
