--- a/css/main.css
+++ b/css/main.css
@@ -623,28 +623,6 @@ img {
   height: auto;
 }
 
-.section {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-@media screen and (min-width: 1200px) {
-  .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-}
-
-.section__title {
-  margin-bottom: 50px;
-  color: #212121;
-  font-weight: 700;
-  font-size: 36px;
-  letter-spacing: 0.03em;
-  line-height: 1.2;
-  text-align: center;
-}
-
 .container {
   max-width: 480px;
   padding-left: 15px;
@@ -859,8 +837,6 @@ img {
 .mobile-btn {
   position: relative;
   display: block;
-  width: 40px;
-  height: 40px;
   z-index: 10;
   border: transparent;
   background-color: transparent;
@@ -876,6 +852,16 @@ img {
 .mobile-btn__icon {
   width: 40px;
   height: 40px;
+}
+
+.mobile-btn__icon .mobile-btn:hover,
+.mobile-btn:focus .mobile-btn__icon {
+  fill: #2196f3;
+}
+
+.mobile-btn__icon .mobile-btn:hover .mobile-nav__link--active,
+.mobile-btn:focus .mobile-btn__icon .mobile-nav__link--active {
+  color: #212121;
 }
 
 .mobile-btn__icon-open {
@@ -904,7 +890,6 @@ img {
   padding-top: 48px;
   padding-bottom: 48px;
   background-color: #fff;
-  overflow-y: scroll;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   visibility: hidden;
@@ -936,6 +921,14 @@ img {
   display: flex;
 }
 
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .mobile-social {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 20px;
+  }
+}
+
 .mobile-nav__item {
   font-family: 'Roboto';
   font-style: normal;
@@ -960,13 +953,19 @@ img {
 }
 
 .mobile-connect__item:not(:last-child) {
+  font-size: 25px;
   margin-bottom: 32px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  font-size: 34px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-connect__item:not(:last-child) {
+    font-size: 34px;
+  }
 }
 
 .mobile-connect__item:last-child {
@@ -1009,7 +1008,7 @@ img {
 }
 
 .hero {
-  height: 600px;
+  height: 400px;
   max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
@@ -1024,10 +1023,11 @@ img {
   padding-bottom: 118px;
 }
 
-@media screen and (min-width) {
+@media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
+    height: 600px;
   }
 }
 
@@ -1044,7 +1044,7 @@ img {
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 479px) {
   .hero__title {
     font-size: 21px;
   }
@@ -1478,6 +1478,27 @@ img {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 480px) {
+  .benefits__box {
+    width: 450px;
+    height: 120px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .benefits__box {
+    width: 354px;
+    height: 120px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits__box {
+    width: 270px;
+    height: 120px;
+  }
+}
+
 .benefits__title {
   margin-bottom: 10px;
   color: #212121;
@@ -1588,7 +1609,12 @@ img {
   }
 }
 
-@media screen and (max-width: 767px) {
+.team-image {
+  width: 320px;
+  height: 300px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .team-image {
     width: 450px;
     height: 460px;
@@ -1609,9 +1635,19 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 479px) {
   .team__item {
-    max-width: 450px;
+    width: 100%;
+    height: 460px;
+  }
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .team__item {
+    width: 450px;
     height: 622px;
   }
   .team__item:not(:last-child) {
@@ -1756,8 +1792,15 @@ img {
 }
 
 .clients__item {
-  width: 210px;
+  width: 130px;
   height: 92px;
+}
+
+@media screen and (min-width: 480px) {
+  .clients__item {
+    width: 210px;
+    height: 92px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1814,17 +1857,27 @@ img {
 }
 
 .port-list {
+  margin-bottom: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 50px;
 }
 
-.port-list__item:not(:last-child) {
-  margin-right: 8px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .port-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 15px 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .port-list__item:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 
 .port-list__holder {
@@ -1854,6 +1907,12 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .port-list__holder {
+    font-size: 10px;
+  }
+}
+
 .port-products {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1881,9 +1940,44 @@ img {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+@media screen and (min-width: 480px) {
+  .card-set__link {
+    width: 450px;
+    height: 404px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card-set__link {
+    width: 354px;
+    height: 440px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-set__link {
+    width: 370px;
+    height: 404px;
+  }
+}
+
 .card-set__thumb {
   position: relative;
   overflow: hidden;
+}
+
+@media screen and (min-width: 480px) {
+  .card-set_img {
+    width: 450px;
+    height: 294px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card-set_img {
+    width: 354px;
+    height: 294px;
+  }
 }
 
 .card-set__overlay {
@@ -1922,6 +2016,12 @@ img {
   font-size: 18px;
   line-height: 1.6;
   color: #ffffff;
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .card-set__text {
+    font-size: 13px;
+  }
 }
 
 .card-set-meta {
@@ -2150,8 +2250,8 @@ img {
 }
 
 .form-subscribe__input {
+  width: 290px;
   display: inline-block;
-  width: 358px;
   outline: none;
   background-color: #2F303A;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -2161,6 +2261,12 @@ img {
   padding-left: 16px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .form-subscribe__input {
+    width: 358px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -2233,6 +2339,42 @@ img {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+  }
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.section__title {
+  margin-bottom: 30px;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  line-height: 1.2;
+  text-align: center;
+  color: #212121;
+}
+
+@media screen and (min-width: 480px) {
+  .section__title {
+    margin-bottom: 50px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section__title {
+    margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 /*# sourceMappingURL=main.css.map */
