--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -29,8 +29,14 @@ justify-content: center;
 }
 
 .clients__item {
-    width: 210px;
+    width: 130px;
     height: 92px;
+
+    @media screen and (min-width:480px) {
+width: 210px;
+height: 92px;
+    }
+    
 
 @media screen and (min-width:768px) and (max-width:1199px) {
 width: 226px;
