--- a/sass/components/_hero-studio.scss
+++ b/sass/components/_hero-studio.scss
@@ -1,5 +1,5 @@
 .hero {
-    height: 600px;
+    height: 400px;
     max-width: 1600px;
     margin-right: auto;
     margin-left: auto;
@@ -16,9 +16,10 @@
 padding-top: 118px;
 padding-bottom: 118px;
 
-    @media screen and (min-width) {
+    @media screen and (min-width:1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
+    height: 600px;
     }
     
 }
@@ -36,7 +37,7 @@ text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:479px) {
     font-size: 21px;
 }
 
