--- a/sass/components/_mobile-btn.scss
+++ b/sass/components/_mobile-btn.scss
@@ -1,8 +1,7 @@
 .mobile-btn {
     position: relative;
     display: block;
-    width: 40px;
-    height: 40px;
+    
     z-index: 10;
 
     border: transparent;
@@ -16,6 +15,10 @@
     &__icon {
         width: 40px;
         height: 40px;
+
+        .mobile-btn:hover, 
+        .mobile-btn:focus &{
+            fill:$blue-color;
     }
     
     &__icon-open {
@@ -29,6 +32,8 @@
 
  
 }
+
+
 
 .mobile-btn.is-active .mobile-btn__icon-close{
     opacity: 1;
