--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -8,7 +8,7 @@
     padding-top: 48px;
     padding-bottom: 48px;
     background-color: #fff;
-overflow-y: scroll;
+
 
     transform: translateX(100%);
     visibility: hidden;
@@ -31,7 +31,12 @@ overflow-y: scroll;
     margin-bottom: 64px;
 }
 .mobile-social{
-    display: flex;
+display: flex;
+    @media screen and (min-width: 320px) and (max-width:479px) {
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    
 }
 
 .mobile-nav__item{
@@ -58,13 +63,19 @@ overflow-y: scroll;
 }
 
 .mobile-connect__item:not(:last-child) {
-    margin-bottom: 32px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
+font-size: 25px;
+margin-bottom: 32px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+
+line-height: 1.2;
+letter-spacing: 0.02em;
+
+ @media screen and (min-width:480px) {
     font-size: 34px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+}
+    
     }
 
 .mobile-connect__item:last-child{
