--- a/sass/components/_port-card-set.scss
+++ b/sass/components/_port-card-set.scss
@@ -20,6 +20,21 @@
             0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);
     }
+
+    @media screen and (min-width:480px) {
+        width: 450px;
+        height: 404px;
+    }
+    
+    @media screen and (min-width:768px) {
+        width: 354px;
+        height: 440px;
+    }
+    
+    @media screen and (min-width:1200px) {
+        width: 370px;
+        height: 404px;
+    }
 }
 
 
@@ -27,6 +42,17 @@
 .card-set__thumb {
     position: relative;
     overflow: hidden;
+}
+
+.card-set_img{
+    @media screen and (min-width:480px) {
+        width: 450px;
+        height: 294px;
+    }
+    @media screen and (min-width:768px) {
+        width: 354px;
+        height: 294px;
+    }
 }
 
 .card-set__overlay {
@@ -41,6 +67,7 @@
     opacity: 0;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
         .card-set__link:hover &,
         .card-set__link:focus & {
@@ -61,6 +88,10 @@
     font-size: 18px;
     line-height: 1.6;
     color: $white-color;
+
+    @media screen and (min-width:320px) and (max-width:479px) {
+        font-size: 13px;
+    }
 }
 
 .card-set-meta {
