--- a/sass/components/_port-list-button.scss
+++ b/sass/components/_port-list-button.scss
@@ -1,11 +1,27 @@
 .port-list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+margin-bottom: 50px;
+display: flex;
+justify-content: center;
+
+
+
+    @media screen and (min-width: 320px) and (max-width:767px){
+        flex-wrap: wrap;
+        gap: 15px 8px;
+    }
+
+    @media screen and (min-width: 1200px) {
+
+    }
+    
+    
 }
 
 .port-list__item:not(:last-child) {
-    margin-right: 8px;
+    @media screen and (min-width:768px) {
+        margin-right: 8px;
+    }
+    
 }
 
 .port-list__holder {
@@ -35,5 +51,9 @@
     background-color: $blue-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);}
+
+        @media screen and (min-width:320px) and (max-width:479px) {
+            font-size: 10px;
+        }
 }
 
