--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -29,7 +29,12 @@
 
 .team-image{
 
-@media screen and (max-width:767px) {
+    width: 320px;
+    height: 300px;
+
+    
+
+@media screen and (min-width:480px) and (max-width:767px) {
     width: 450px;
     height: 460px;
 }
@@ -47,8 +52,17 @@
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
 
-@media screen and (max-width:767px) {
-    max-width: 450px;
+@media screen and (min-width:320px) and (max-width:479px){
+width: 100%;
+height: 460px;
+
+    &:not(:last-child) {
+    margin-bottom: 30px;
+}
+}
+
+@media screen and (min-width:480px) and (max-width:767px) {
+    width: 450px;
     height: 622px;
 
     &:not(:last-child){
