--- a/sass/utils/_section.scss
+++ b/sass/utils/_section.scss
@@ -11,11 +11,22 @@ padding-bottom: 60px;
 }
 
 .section__title {
+margin-bottom: 30px;
+font-size: 24px;
+font-weight: 700;
+letter-spacing: 0.03em;
+line-height: 1.2;
+text-align: center;
+color: $primary-color;
+
+@media screen and (min-width:480px) {
     margin-bottom: 50px;
-    color: $primary-color;
-    font-weight: 700;
-    font-size: 36px;
-    letter-spacing: 0.03em;
-    line-height: 1.2;
-    text-align: center;
+    font-size: 28px;
+}
+
+    @media screen and (min-width:1200px) {
+        margin-bottom: 50px;
+        font-size: 36px;
+    }
+   
 }
