--- a/sass/components/_port-card-set.scss
+++ b/sass/components/_port-card-set.scss
@@ -102,6 +102,10 @@
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        height: 140px;
+    }
 }
 
 .card-set-meta__caption {
