--- a/sass/components/_gallery-section.scss
+++ b/sass/components/_gallery-section.scss
@@ -1,5 +1,9 @@
 .section--nopaddingtop {
+    
     padding-top: 0;
+    @media screen and (max-width: 1199px) {
+        display: none;
+    }
 }
 
 .section__title {
