--- a/sass/components/_backdrop-modal.scss
+++ b/sass/components/_backdrop-modal.scss
@@ -7,6 +7,7 @@
     background: rgba(0, 0, 0, 0.2);
     visibility: visible;
     overflow-y: scroll;
+    z-index: 100;
 }
 
 .is-hidden {
@@ -27,9 +28,9 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    @media screen and (max-width:480px) {
-        height: 609px;
-        width: 300px;
+    @media screen and (max-width:479px) {
+        height: 568px;
+        width: 320px;
     }
 
     @media screen and (min-width:1200px) {
