--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,7 @@
 .mobile-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
@@ -24,12 +27,12 @@
     }
 }
 
-.mobile-nav{
-    margin-bottom: 302px;
-}
-.mobile-contacts{
-    margin-bottom: 64px;
-}
+// .mobile-nav{
+//     margin-bottom: 302px;
+// }
+// .mobile-contacts{
+//     margin-bottom: 64px;
+// }
 .mobile-social{
 display: flex;
     @media screen and (min-width: 320px) and (max-width:479px) {
