--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -39,9 +39,12 @@ display: none;
 .site-contacts__item {
     position: relative;
     
+    &:not(:last-child){
 @media screen and (max-width:1199px) {
     margin-bottom: 10px;
 }
+    }
+
 
      &:last-child {
         @media screen and (min-width:1200px) {
@@ -141,13 +144,17 @@ display: none;
 /* Logo */
 
 .logo {
-    margin-right: 93px;
+    
     color: $blue-color;
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
     text-decoration: none;
+
+    @media screen and (min-width:768px) {
+    margin-right: 93px;
+    }
 }
 
 .logo__black {
