--- a/sass/components/_footer-page.scss
+++ b/sass/components/_footer-page.scss
@@ -87,6 +87,10 @@
 
 .footer-social {
 
+@media screen and (max-width:767px) {
+    margin-bottom: 60px;
+}
+
     @media screen and (min-width:1200px) {
         margin-left: 70px;
     }
@@ -110,7 +114,7 @@
 .footer-network {
     @media screen and (max-width:767px) {
         justify-content: center;
-        margin-bottom: 60px;
+        
     }
     
     display: flex;
