--- a/sass/components/_port-card-set.scss
+++ b/sass/components/_port-card-set.scss
@@ -8,6 +8,12 @@
     background: #ffffff;
 }
 
+
+.card-set{
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        width: 100%;
+    }
+}
 .card-set__link {
     display: block;
     text-decoration: none;
@@ -26,10 +32,15 @@
         height: 404px;
     }
     
-    @media screen and (min-width:768px) {
-        width: 354px;
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        
+        // width: 354px;
         height: 440px;
     }
+
     
     @media screen and (min-width:1200px) {
         width: 370px;
@@ -45,12 +56,17 @@
 }
 
 .card-set_img{
+    width: 100%;
     @media screen and (min-width:480px) {
         width: 450px;
         height: 294px;
     }
     @media screen and (min-width:768px) {
         width: 354px;
+        height: 294px;
+    }
+    @media screen and (min-width:1200px) {
+        width: 370px;
         height: 294px;
     }
 }
@@ -103,9 +119,10 @@
     border-right: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
 
-    @media screen and (min-width:768px) and (max-width:1199px){
-        height: 140px;
-    }
+   @media screen and (min-width:768px) and (max-width:1199px) {
+       flex-grow: 1;
+       width: 354px;
+   }
 }
 
 .card-set-meta__caption {
