--- a/sass/components/_port-list-button.scss
+++ b/sass/components/_port-list-button.scss
@@ -1,19 +1,25 @@
 .port-list {
-margin-bottom: 50px;
+
 display: flex;
-justify-content: center;
 
 
 
-    @media screen and (min-width: 320px) and (max-width:767px){
+
+    @media screen and (max-width:767px){
         flex-wrap: wrap;
         gap: 15px 8px;
+        margin-bottom: 40px;
     }
 
-    @media screen and (min-width: 1200px) {
-
+    @media screen and (min-width: 768px) {
+justify-content: center;
+margin-bottom: 30px;
     }
     
+    @media screen and (min-width: 1200px) {
+        justify-content: center;
+        margin-bottom: 50px;
+    }
     
 }
 
@@ -52,8 +58,8 @@ justify-content: center;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);}
 
-        @media screen and (min-width:320px) and (max-width:479px) {
-            font-size: 10px;
-        }
+        // @media screen and (min-width:320px) and (max-width:479px) {
+        //     font-size: 10px;
+        // }
 }
 
