--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -28,8 +28,8 @@
 }
 
 .team-image{ 
-    width: 320px;
-    height: 300px;
+    width: 100%;
+    
 
 
 @media screen and (min-width:480px)  {
@@ -55,9 +55,9 @@
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
 
-@media screen and (min-width:320px) and (max-width:479px){
-width: 100%;
-height: 460px;
+@media screen and (max-width:479px){
+// width: 100%;
+
 
     &:not(:last-child) {
     margin-bottom: 30px;
@@ -65,8 +65,8 @@ height: 460px;
 }
 
 @media screen and (min-width:480px) and (max-width:767px) {
-    width: 450px;
-    height: 622px;
+    
+    
 
     &:not(:last-child){
         margin-bottom: 30px;
@@ -74,8 +74,8 @@ height: 460px;
 }
 
 @media screen and (min-width:768px) and (max-width:1199px) {
-    width: 354px;
-    height: 536px;
+    
+    
 }
 
         @media screen and (min-width:1200px) {
@@ -91,12 +91,6 @@ height: 460px;
 /* Team card */
 .team-card{
     
-    @media screen and (max-width:767px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
 
 
 }
