--- a/css/main.css
+++ b/css/main.css
@@ -2341,7 +2341,7 @@ img {
 }
 
 .form-subscribe__input {
-  width: 290px;
+  width: 100%;
   display: inline-block;
   outline: none;
   background-color: #2F303A;
@@ -2356,13 +2356,19 @@ img {
 
 @media screen and (min-width: 480px) {
   .form-subscribe__input {
-    width: 358px;
+    width: 450px;
   }
 }
 
 @media screen and (max-width: 1199px) {
   .form-subscribe__input {
     margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-subscribe__input {
+    width: 358px;
   }
 }
 
